--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -275,6 +275,11 @@ bind = $mainMod SHIFT, j, swapwindow, d
 bind = $mainMod SHIFT, k, swapwindow, u
 bind = $mainMod SHIFT, l, swapwindow, r
 
+#media 
+bind = $mainMod CTRL ALT, j, exec, playerctl play-pause
+bind = $mainMod CTRL ALT, l, exec, playerctl next
+bind = $mainMod CTRL ALT, h, exec, playerctl previous
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
