--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -28,7 +28,7 @@ input-field {
 	fade_on_empty = true
 	fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
 	placeholder_text = <i>...</i> # Text rendered in the input box when it's empty.
-	hide_input = true
+	hide_input = true; 
 	rounding = -1 # -1 means complete rounding (circle/oval)
 	check_color = rgb(204, 136, 34)
 	fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
