whatsong on waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = swaync & hyprpaper & fcitx5 & waybar & vesktop & firefox & terminal 
+exec-once = swaync & hyprpaper & fcitx5 & waybar & vesktop & firefox & $terminal 
 # exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #
 
@@ -195,7 +195,7 @@ $shiftMod = SUPER SHIFT
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, W, killactive,
-bind = $mainMod, M, exec, hyprlock
+bind = $mainMod, M, exec, ~/.config/script/wofi-powermenu.sh
 bind = $mainMod CTRL, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
