--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -10,7 +10,7 @@ wallpaper = eDP-1,/home/hvmegy/Pictures/wallpaperNep.jpg
 # .. more monitors
 
 #enable splash text rendering over the wallpaper
-splash = true
+splash = false
 
 #fully disable ipc
 # ipc = off
