update mouse sensitive and bind to maximize

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,13 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = swaync & hyprpaper & fcitx5 & waybar & vesktop & firefox & $terminal 
+exec-once = swaync & hyprpaper & fcitx5 & waybar
+
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] vesktop
+exec-once = [workspace 4 silent] spotify
+
 # exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #
 
@@ -164,7 +170,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -1.0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true;
@@ -199,6 +205,7 @@ bind = $mainMod, M, exec, ~/.config/script/wofi-powermenu.sh
 bind = $mainMod CTRL, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
+bind = $mainMod CTRL, F, fullscreen, 1
 bind = $mainMod, space, exec, pkill wofi || wofi --show run
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
