--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,11 +50,13 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = swaync & hyprpaper & fcitx5 & waybar
+exec-once = hyprpaper & fcitx5
+exec-once = waybar & swaync
+# exec-once = ags
 
-exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] $terminal
-exec-once = [workspace 3 silent] vesktop
+exec-once = [workspace 1 silent] vesktop
+exec-once = [workspace 2 silent] firefox
+exec-once = [workspace 3 silent] $terminal
 exec-once = [workspace 4 silent] spotify
 
 # exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -106,7 +108,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 1.0
 
 
     drop_shadow = true
