--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,6 @@
-font_family      JetbrainsMono Nerd Font
+# font_family      JetbrainsMono Nerd Font
+font_family	 JetbrainsMono Nerd Font 
+font_size	 14.5
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
